start bringing necessary repositories to java17